Add combat-tag stack, directions, debug & tests
Introduce a full combat-tag stack model and support for directional tags. Key changes: add CombatTagDirection and CombatTagStack; expand CombatTag fields (owner/opponent/credited/direction/updatedAt); refactor JudgmentService to manage per-player stacks, independent expiries, pruning, and debugStack output; add /judgment debug stack command and improved tab completion in JudgmentCommand; add README and plugin.yml updates; add unit tests for command and service behaviors (combat stacks, ordering, refresh, expiry, logout handling).